fix album list not wrapping in Chrome

--- a/src/static/css/templates/_albums-index.scss
+++ b/src/static/css/templates/_albums-index.scss
@@ -37,7 +37,7 @@
 
 .album-group__album {
   white-space: nowrap;
-  display: inline;
+  display: inline-block;
 }
 
 .album-group__album__link {
